# skinstression

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  analyze_images.sh  environment.yml  genindex.html  index.html  modules.html  objects.inv  predict.py  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  shg-num_workers_benchmark.sbatch  shg-optuna.sbatch  shg-strain-stress.sbatch  shg-train.sbatch  src.conf.html  src.ds.html  src.html  src.tests.html  sweep.yaml  test_conc.py  train.py
.github/workflows/: gh-pages.yaml
_sources/: index.rst.txt  src.conf.rst.txt
_static/diagrams/src/: system_context_diagram.puml
docs/: Makefile  conf.py  index.rst  make.bat
docs/source/: conf.py  index.rst  src.ds.rst  src.rst
docs/src/: index.rst  src.ds.rst  src.rst  src.tests.rst
docs/src/_static/diagrams/src/: container_diagram.puml
model_zoo/: 20.pt
notebooks/: 1-sj-make-splits.ipynb  1-sj-preprocess-images.ipynb  1-sjg-interpolation.ipynb  10-sj-preprocess.ipynb  10-sj-preprocessv2.ipynb  10-sjg-t-sne.ipynb  11-sj-monai-dataset.ipynb  11-sjg-logistic.ipynb  12-sj-monai-model.ipynb  12-sjg-match-sample-person.ipynb  13-sj-tozarr.ipynb  13-sjg-num_workers.ipynb  14-sj-zarr_dataset.ipynb  14-sjg-lds-bins.ipynb  15-sjg-captum-intro.ipynb  16-sjg-vis-scheduler.ipynb  17-sjg-normalization.ipynb  18-sjg-histogram-equalization.ipynb  19-sjg-kurtosis.ipynb  2-sj-3d-padding.ipynb  2-sj-load-data.ipynb  2-sjg-create_labels.ipynb  2-sjg-create_sigmoid_labels.ipynb  20-sjg-data-augmentation.ipynb  23-sjg-grayscale.ipynb  25-sjg-resize.ipynb  26-sjg-filter-images.ipynb  26-sjg-sort-images.ipynb  27-script.py  27-sjg-n2v-train.ipynb  28-sjg-n2v-pred.ipynb  29-sjg-mean-std-folds.ipynb  3-siemdejong-define-model.ipynb  3-sj-data-augmentations.ipynb  3-sjg-rename_image_files.ipynb  30-sjg-inference.ipynb  31-sjg-plot-from-csv.ipynb  32-sj-compare-output-raw.ipynb  34-sj-plot-avg-vs-r2.ipynb  35-sj-hole-attack.ipynb  (+14 more)
ppn2v/: 1-n2v-train.py  2-n2v-pred.py  3-ppn2v-noise-model.py  4-ppn2v-train.py  5-ppn2v-pred.py  6-ppn2v-inference.py
skinstression/: __init__.py  dataset.py  model.py  test.py  train.py  utils.py
skinstression/models/: mobilenetv2.py  shufflenetv2.py
src/: main.py
src/agents/: agent.py  base.py
src/conf/: config.py  config_example.yaml
src/configs/: config.json
src/data/: make_dataloader.py  make_dataset.py
src/ds/: cross_validation.py  cross_validator.py  dataset.py  exceptions.py  functions.py  hyperparameters.py  logging_setup.py  loss.py  metrics.py  models.py  runner.py  tensorboard.py  test.py  testing.py  tracking.py  training.py  transforms.py  utils.py  visualization.py
src/models/: evaluate_model.py  models.py  train_model.py  validate_model.py
src/tests/: benchmark_num_workers.py
src/utils/: config.py  dirs.py  misc.py
