[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "skinstression"
authors = [
    {name = "Siem de Jong", email = "siem.dejong@hotmail.nl"},
]
description = "Strain-stress curve regression on higher harmonic generation images of skin tissue."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["hhg", "regression", "skin"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch",
    "torchvision",
    "lightning",
    "numpy",
    "monai",
    "matplotlib",
    "pandas",
    "h5torch",
    "scikit-learn",
    "scipy",
    "opencv-python",
    "wandb",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["skinstression*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["skinstression.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project.optional-dependencies]
dev = [
    "pre-commit"
]

# [project.scripts]
# my-script = "my_package.module:function"

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
